adding character appearances to choose from

--- a/souls/chrctrCustom.html
+++ b/souls/chrctrCustom.html
@@ -87,6 +87,25 @@
             <button type="submit" onclick="window.location.href='/ramjiJarmi/souls/game.html'">CONFIRM</button>
             <button type="button">CANCEL</button>
         </div>
+
+        <label>Character Image:</label>
+        <input type="radio" id="character1" name="character" value="character1">
+        <label for="character1"><img src="character1.jpg" alt="Character 1"></label>
+
+        <input type="radio" id="character2" name="character" value="character2">
+        <label for="character2"><img src="character2.jpg" alt="Character 2"></label>
+
+        <input type="radio" id="character3" name="character" value="character3">
+        <label for="character3"><img src="character3.jpg" alt="Character 3"></label>
+
+        <input type="radio" id="character4" name="character" value="character4">
+        <label for="character4"><img src="character4.jpg" alt="Character 4"></label>
+        
+        <div style="margin-top: 10px;">
+            <button type="submit" onclick="window.location.href='/ramjiJarmi/souls/game.html'">CONFIRM</button>
+            <button type="button">CANCEL</button>
+        </div>
+
     </div>
 </body>
 </html>
