--- a/souls/game.html
+++ b/souls/game.html
@@ -30,9 +30,8 @@
 <!-- add style.css sheet later -->
 <body>
     <div class="container">
-        <div id="imageDisplay">
-            <img src="/ramjiJarmi/images/ds1.jpg" width="888px" height="500px">
-        </div>
+        <img src="/ramjiJarmi/souls/images/pixelbackground.png" width="888px" height="500px">
+        <img src="/ramjiJarmi/souls/images/estus.gif" id="estusMan" width="30px" height="50px">
     </div>
     <div class="dashed-divider"></div>
     <div id="commandPrompt">
