Combat for the boss fight starting. Referencing rayanne's code

--- a/souls/combat.html
+++ b/souls/combat.html
@@ -2,7 +2,7 @@
 
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/ramjiJarmi/souls/css/combat.css">
+    <link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <style>
     .dashed-divider {
@@ -30,7 +30,7 @@
 <!-- add style.css sheet later -->
 <body>
     <div class="container">
-        <img src="/ramjiJarmi/souls/images/pixelbackground.png" width="888px" height="500px">
+        <img src="/ramjiJarmi/souls/images/boss.png" width="800px" height="500px">
     </div>
     <!-- <div>
         <img src="/ramjiJarmi/souls/images/estus.gif" id="estusMan" width="30px" height="50px">
@@ -44,12 +44,6 @@
         <script src="/ramjiJarmi/souls/js/cmd.js"></script>
     <div>
 </body>
-
-<div class="bossHP">
-    <div id="healthbar">
-        <div id="currentHealth" style="width:100%"></div>
-    </div>
-</div>
 
 <script>
 
