Integrating rayannes character customization + turn options

--- a/souls/game.html
+++ b/souls/game.html
@@ -2,7 +2,7 @@
 
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/ramjiJarmi/souls/css/combat.css">
+    <link rel="stylesheet" type="text/css" href="/ramjiJarmi/souls/game.css">
 </head>
 <style>
     .dashed-divider {
@@ -44,12 +44,6 @@
         <script src="/ramjiJarmi/souls/js/cmd.js"></script>
     <div>
 </body>
-
-<div class="bossHP">
-    <div id="healthbar">
-        <div id="currentHealth" style="width:100%"></div>
-    </div>
-</div>
 
 <script>
 
