--- a/souls/combat.html
+++ b/souls/combat.html
@@ -48,7 +48,7 @@
 <!-- add style.css sheet later -->
 <body>
     <div class="container">
-        <img src="/ramjiJarmi/souls/images/boss.png" width="800px" height="500px">
+        <img src="/ramjiJarmi/souls/images/boss.png" id="bossImg" width="800px" height="500px">
     </div>
     <div class="dashed-divider"></div>
     <div id="commandPrompt">
