--- a/souls/game.html
+++ b/souls/game.html
@@ -30,11 +30,13 @@
 <!-- add style.css sheet later -->
 <body>
     <div class="container">
-        <img src="/ramjiJarmi/souls/images/pixelbackground.png" width="888px" height="500px">
+        <div class="pixelBg">
+            <img src="/ramjiJarmi/souls/images/pixelbackground.png" width="888px" height="500px">
+        </div>
+        <div class="estusMan">
+            <img src="/ramjiJarmi/souls/images/estus.gif" width="75px" height="75px">
+        </div>
     </div>
-    <!-- <div>
-        <img src="/ramjiJarmi/souls/images/estus.gif" id="estusMan" width="30px" height="50px">
-    </div> -->
     <div class="dashed-divider"></div>
     <div id="commandPrompt">
         <div id="cmd" class="inputLine">
