--- a/souls/chrctrCustom.html
+++ b/souls/chrctrCustom.html
@@ -85,13 +85,13 @@
 
         <label>Character Image:</label>
         <input type="radio" id="character1" name="character" value="character1">
-        <label for="character1"><img src="character1.jpg" alt="Character 1"></label>
+        <label for="character1"><img src="/ramjiJarmi/souls/images/person1.png" width="75px" height="75px" alt="Character 1"></label>
 
         <input type="radio" id="character2" name="character" value="character2">
-        <label for="character2"><img src="character2.jpg" alt="Character 2"></label>
+        <label for="character2"><img src="/ramjiJarmi/souls/images/person2.png" width="75px" height="75px" alt="Character 2"></label>
 
         <input type="radio" id="character3" name="character" value="character3">
-        <label for="character3"><img src="character3.jpg" alt="Character 3"></label>
+        <label for="character3"><img src="/ramjiJarmi/souls/images/Person3.png" width="75px" height="75px" alt="Character 3"></label>
 
         <input type="radio" id="character4" name="character" value="character4">
         <label for="character4"><img src="character4.jpg" alt="Character 4"></label>
