--- a/souls/chrctrCustom.html
+++ b/souls/chrctrCustom.html
@@ -67,6 +67,7 @@
 
         <label for="class">Class:</label>
         <select id="class" name="class">
+            <option value="None">None</option>
             <option value="knight">Knight</option>
             <option value="god">God</option>
             <option value="hunter">Hunter</option>
