--- a/souls/chrctrCustom.html
+++ b/souls/chrctrCustom.html
@@ -14,6 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow-y: hidden;
         }
         .container {
             border: 4px solid #7c6c54;
@@ -21,6 +22,8 @@
             width: 350px;
             background-color: rgba(0, 0, 0, 0.7);
             box-shadow: 0px 0px 50px #000;
+            overflow: auto;
+            max-height: 80vh;
         }
         label {
             display: block;
