--- a/souls/itemDrop.html
+++ b/souls/itemDrop.html
@@ -27,6 +27,8 @@
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
+            font-family: "Garamond", Times, serif;
+            font-size: 18px;     
         }
         .button {
             background-color: transparent;
@@ -34,7 +36,7 @@
             color: white;
             text-align: center;
             font-family: "Garamond", Times, serif;
-            font-size: 24px;
+            font-size: 18px;
         }
         button:hover {
             background-color: #520000;
