backend of customization and game leaderboard is completed

--- a/souls/game.html
+++ b/souls/game.html
@@ -40,6 +40,19 @@
     </div>
     <div class="dashed-divider"></div>
     <div id="commandPrompt">
+        <div id="welcome" class="inputLine">
+            <h4>Hi, Welcome to the Terminal Hub Area! </h4>
+                Try out the commands so that you can explore the world of Terminal Souls!
+                <br>
+                - ls <- list 
+                <br>
+                - cd <- change directory
+                <br>
+                - ./filename.sh <- to run a file with the tag .sh
+                <br>
+                Anyways Have fun!
+            
+        <div>
         <div id="cmd" class="inputLine">
             <label for="userInput1" id="label" >TheChosenUndead~ </label>
             <input class="commandInput" id="userInput1" type="text">
