--- a/souls/itemDrop.html
+++ b/souls/itemDrop.html
@@ -54,7 +54,7 @@
             <div id="itemDrop">
                 <h2>The boss dropped an item!</h2>
                 <img src="" id="item" alt="Dropped Item" width="400px" height="250px">
-                <p id="itemName"></p> <!-- Add a paragraph to display the item name -->
+                <p id="itemName"></p>
             </div>
             <button id="itemButton" onclick="window.location.href='/ramjiJarmi/souls/upgrade.html'">Add to inventory!</button>
         </div>
